# Vehicle-Dealership

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-flake-ci.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
kubernetes/: configmap.yaml  db-service.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  statefulset.yaml
